# SafeNode

./: .gitignore  .gitmessage  .stylelintrc.json  .vercelignore  ALL_FEATURES_COMPLETED.md  AUTH_TEST_SUMMARY.md  BILLING_SETUP.md  COLOR_SCHEME_COMPARISON.md  COMPLETE_ROUTE_VERIFICATION.md  COMPLETE_SYSTEM_CONSISTENCY.md  CONFIG_AS_CODE.md  CORS_FIX.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DESIGN_SYSTEM_UPGRADE.md  DEVELOPMENT_QUICK_START.md  EXECUTION_ROADMAP.md  FEATURES_COMPLETED_SUMMARY.md  FINAL_MODERNIZATION_COMPLETE.md  FRONTEND_COMPREHENSIVE_AUDIT.md  FRONTEND_IMPROVEMENTS_COMPLETE.md  FRONTEND_RECONSTRUCTION_COMPLETE.md  FRONTEND_RECONSTRUCTION_PLAN.md  GETTING_STARTED.md  HOW_TO_USE_DESKTOP.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_PRIORITY_LIST.md  INCOMPLETE_FEATURES.md  INDIGO_COLOR_SCHEME_UPDATE.md  LAUNCH_READINESS.md  MOBILE_APP_PLAN.md  MOBILE_APP_PROMPT.md  MOBILE_TECH_COMPARISON.md  MODERNIZATION_COMPLETE.md  POSTMAN_QUICK_START.md  POST_COMPLETION_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_STATUS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SCAN_SUMMARY.md  (+42 more)
backend/: .env.example  .eslintrc.json  BACKEND_UPGRADE_README.md  Dockerfile  Dockerfile.prod  README.md  env.example  jest.config.js  nixpacks.toml  package-lock 2.json  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.test.json  vercel.json
docs/: APP_FLOW_ANALYSIS.md  BACKEND_FILES_SUMMARY.md  BRAND_GUIDELINES.md  COMPLETE_ROUTE_PAGE_MAPPING.md  DEMO_ACCOUNT.md  FIXES_SUMMARY.md  GO_LIVE_RUNBOOK.md  HOW_TEAMS_WORK.md  HOW_TO_USE_MOBILE.md  LOGIN_STABILIZATION_COMPLETE.md  MEGA_PROMPT.md  MONITORING_ALERTS.md  MONITORING_SETUP.md  POSTMAN_TESTING_GUIDE.md  PRODUCTION_CHECKLIST.md  QUICK_TEST.md  README.md  STABILIZATION_COMPLETE.md  TESTING_GUIDE_PRODUCTION.md  TEST_IMPLEMENTATION.md  TEST_PROGRESS.md  TROUBLESHOOTING.md  brand-kit.md  build-desktop.sh  opencla-regression-handoff.md  ui-mockups.md
extension/: background.js  content.css  content.js  create_icons.js  manifest.json  popup.css  popup.html  popup.js
frontend/: .env.example  .eslintrc.json  Dockerfile.prod  UI_IMPROVEMENTS_GUIDE.md  index.html  package-lock 2.json  package-lock.json  package.json  tailwind.config.js  test-output.css  tsconfig.json  vercel.json  vite.config.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-frontend.sh
src-tauri/src/: biometrics.rs  main.rs
(+337 files in other folders)
