[package]
name = "safenode-desktop"
version = "0.1.0"
description = "SafeNode Desktop - Secure Password Manager"
authors = ["SafeNode Team"]
license = "MIT"
repository = "https://github.com/safenode/safenode"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tauri-plugin-shell = "1.0"
tauri-plugin-dialog = "1.0"
tauri-plugin-fs = "1.0"
tauri-plugin-store = "1.0"
keyring = "2.3"  # For system keychain integration

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
